# MetabotAPI

./: .gitignore  README.md
cpp/: CMakeLists.txt  main.cpp
python/: CMakeLists.txt  bindingHolobot.cpp  demo-holo-dist.py  demo-holo-ligne.py  demo-holo-monitor.py  demo-holo-motion.py  demo-holo-obstacle.py  demo-holo-vivant.py  demo.py
python/binding/: binding.cpp  bindingHolobot.cpp
python/holobot/: 1-demo-first.py  2-demo-motion.py  3-demo-monitor.py
python/holobot/draft/: demo-holo-ligne.py  demo-holo-vivant.py
python/jupyter/: HoloBot.ipynb  holo_header.py
scripts/: 45-holobot.rules
src/: CMakeLists.txt  Holobot.cpp  Holobot.h  MetabotV2.cpp  MetabotV2.h  Packet.cpp  Packet.h  Robot.cpp  Robot.h  binding.cpp
